<resources>
    <string name="app_name">优记</string>
    <string name="missions_list">任务列表</string>
    <string name="mission_detail">任务详情</string>
    <string name="groups_info">任务分组执行情况</string>
    <string name="add">新增</string>
    <string name="sharp_x1_default">#</string>
    <string name="sharp_x3_default">###</string>
    <string name="sharp_x3x3_default">###-###</string>
    <string name="sharp_x5_default">#####</string>
    <string name="sharp_x15_default">xxxxxxxxxxxxxxx</string>
    <string name="sharp_x2_default">##</string>
    <string name="sharp_x24_default">########################</string>
    <string name="mission_id">01</string>
    <string name="mission_name_default">默认任务1</string>
    <string name="mission_description">任务描述文字</string>
    <string name="mission_description_extra">任务描述文字（文本足够长，内容足够多；文本足够长，内容足够多。）</string>
    <string name="add_group">新建分组</string>
    <string name="presaved_button">预留按键</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="num_36">36</string>
    <string name="num_54">54</string>
    <string name="num_72">72</string>
    <string name="num_90">90</string>
    <string name="group_size">分组大小</string>
    <string name="Order">顺序</string>
    <string name="random">随机</string>
    <string name="manner_of_item_picking">抽取方式</string>
    <string name="manner_of_item_picking2">内容选取方式</string>
    <string name="explanations">在随机模式中被抽取掉的项目，不会出现在顺序模式生成的列表里。</string>
    <string name="default_group_decs">分组描述，默认值。</string>
    <string name="desc_desc">分组描述：</string>
    <string name="default_group_decs2">（可使用默认值）</string>
    <string name="cancel">取消</string>
    <string name="add_new_group">创建新任务分组</string>
    <string name="default_group_decs3">默认可自动生成</string>
    <string name="detail_1">详情</string>
    <string name="reserved">预留</string>
    <string name="items_belongs_to_group">所属项目列表</string>
    <string name="group_detail">分组详情</string>
    <string name="log_view">查看日志</string>
    <string name="logs">日志</string>
    <string name="order2">序号#</string>
    <string name="includingItemsInfo">组内项目总览</string>
    <string name="includingItemsInfo2">项目列表</string>
    <string name="number1">数量：</string>
    <string name="go1">学习</string>
    <string name="go2_repick">复习</string>
    <string name="log_detail">学习日志·详情</string>
    <string name="show_groups">显示分组</string>
    <string name="left_parenthesis">(</string>
    <string name="right_parenthesis">)</string>
    <string name="time_past">时间消耗：</string>
    <string name="time_past_words2">请在60分钟内完成</string>
    <string name="unit_min">分</string>
    <string name="onItsWay">做好准备！马上开始！</string>
    <string name="confirm">确定</string>
    <string name="accomplishedAndConfirm">学习结束，点击完成</string>
    <string name="ready_to_learn">确认开始学习…</string>
    <string name="hold_on_a_moment">正在加载分组信息，请稍等……</string>
    <string name="bar_x2_default">--</string>
    <string name="colon_1">:</string>
    <string name="zero_2">00</string>
    <string name="slash1">/</string>
    <string name="num_one">1</string>
    <string name="time_up1">很遗憾，时间到！</string>
    <string name="go_prolong">那就续吧！</string>
    <string name="give_up">不了，谢谢</string>
    <string name="time_past_words2_1">请在</string>
    <string name="num_60">60</string>
    <string name="time_past_words2_2">分钟内完成。</string>
    <string name="start">开始</string>
    <string name="groups_refresh">刷新</string>
    <string name="filter_groups">过滤分组</string>
    <string name="remove_reds">移除红色组</string>
    <string name="confirm_removeReds">确认删除超时分组?</string>
    <string name="remove">删除</string>
    <string name="minutes_75">75</string>
    <string name="no_record_if_cancel">取消则不记录本次学习</string>
    <string name="hello_world">Hello World!</string>
    <string name="ads_position">（广告位）</string>
    <string name="ads_position_reserved">（广告位预留）</string>
    <string name="reserving_position">（预留位置）</string>
    <string name="num_12">12</string>
    <string name="num_108">108</string>
    <string name="input_by_hand">手动输入</string>
    <string name="input_by_hand2">(手动输入)</string>
    <string name="tip_and_over">点击翻面</string>
    <string name="fill_and_slide_over">填写正确后滑动至下一页</string>
    <string name="confirm_deleting_group">确认删除此分组?</string>
    <string name="preparing_data_please_wait">正在准备数据，请稍候……</string>
    <string name="first_time_running">首次运行 </string>
    <string name="YouMemoryCN">优记</string>
    <string name="YouMemoryEn">YoMemory!</string>
    <string name="re_try">重试</string>
    <string name="items_of_mission">任务所属Items</string>
    <string name="zero_and_numbers">0代表建组时间/1为初次学习记录/复习从2起递增</string>
    <string name="confirm_finish">确认并返回</string>
    <string name="star_symbol">☆</string>
    <string name="one_hour_extra">1小时内多次复习</string>
    <string name="zero">0</string>
    <string name="alpha_testing_string">（工程测试α-0.7.5）</string>
    <string name="fragmentGroupStart">碎+</string>
    <string name="fragmentGroupsList">碎列</string>
    <string name="fragmentGroupRe">碎×</string>
    <string name="detail">详</string>
    <string name="arrowRight">详→</string>
    <string name="mission_info">任务情况</string>
    <string name="resource_list">资源列表</string>
    <string name="number_of_items">资源数量：</string>
    <string name="num_10800">10800</string>
    <string name="percentage_one">1%</string>
    <string name="picked_percentage">已识记：</string>
    <string name="priority">优先级</string>
    <string name="two_bars">--</string>
    <string name="id">ID</string>
    <string name="name">名称</string>
    <string name="phonetic">音标</string>
    <string name="chose">已选用/分组id</string>
    <string name="learned">已学 /优先级</string>
    <string name="bar_star_bar">———☆———</string>
    <string name="E">E</string>
    <string name="number_of_groups">分组数量</string>
    <string name="num_18">18</string>
    <string name="groups_list">分组列表</string>
    <string name="str_description">描述</string>
    <string name="number">数量</string>
    <string name="str_MS">MS</string>
    <string name="str_RMA">RMA</string>
    <string name="str_go">Go!</string>
    <string name="add_str01">预先指定容量,建立分组</string>
    <string name="str_learnAndCreateInOrder">学习式建组，容量取决于当次所学数量</string>
    <string name="str_normal_add">常规方式新建</string>
    <string name="num_8">8</string>
    <string name="num_16">16</string>
    <string name="num_24">24</string>
    <string name="num_32">32</string>
    <string name="num_8_frag">8（碎）</string>
    <string name="explanations_02">请选择合适的容量和抽取方式。（小容量在学习时会更方便哦。）</string>
    <string name="default_group_decs4">本分组共有资源数量：xx。</string>
    <string name="str_MemoryStage">记忆级别</string>
    <string name="str_RMAmount">记忆存量</string>
    <string name="str_timeLeft">预计XX天XX小时xx分钟后，记忆存量衰减至最低阈限，请在此前完成复习。</string>
    <string name="hs_sharp_x_id">id:%1$d</string>
    <string name="sharp_xx_description">xxxxxxx分组描述xxxxxx</string>
    <string name="hs_sharp_x_num">（%1$d）</string>
    <string name="str_groupSetTime">建组时间</string>
    <string name="str_sharp_time">####-##-## ##:##</string>
    <string name="str_groupLastLearningTime">最近复习时间</string>
    <string name="translation02">释义</string>
    <string name="str_pleaseRePickIn_xxTime">请在xx天xx小时xx分钟内完成复习</string>
    <string name="str_merge">将MS相同的若干小分组合并起来复习，生成为一个较大的分组</string>
    <string name="title_dfg_learningAddInOrder">边学边建（顺序）</string>
    <string name="explanations_learningAddInOrder">将顺序选取一定数量的词汇，根据最终的识记数量生成分组</string>
    <string name="title_dfg_learningAddRandom">边学边建（随机）</string>
    <string name="explanations_learningAddRandom">将随机选取一定数量的词汇，根据最终的识记数量生成分组</string>
    <string name="title_dfg_start_learning">开始学习</string>
    <string name="explanations_learningLess">本组容量过小\n将以合并方式开始复习\n\n请在右侧选择来源分组\n\n没有其他碎片组时\n不进行合并</string>
    <string name="str_total_items">已选总量：xx</string>
    <string name="choose_less_group">选择源分组</string>
    <string name="arrows"><![CDATA[—>]]></string>
    <string name="title_dfg_choseSourceFrags">合并来源选择</string>
    <string name="str_choseCategory_dfgLearningMerge">←选择类别</string>
    <string name="str_choseGroup_dfgLearningMerge">←选择分组</string>
    <string name="str_explanation_merge2"><![CDATA[数字：特定MS值下存在的满足特定条件（容量<4或<8）的分组的数量\n\n]]></string>
    <string name="str_explanation_merge3">完成的分组会被删除，部分完成的被拆分，未完成的会保留\n\n</string>
    <string name="str_filter_1">筛选</string>
    <string name="str_size4"><![CDATA[容量<4]]></string>
    <string name="str_size8"><![CDATA[容量<8]]></string>
    <string name="explanations_learningGel">将对该分组进行复习</string>
    <string name="group_info_learningGel">分组信息：xxxx</string>
    <string name="explanations_learningGD">本组容量过小，\n应采取合并式学习</string>
    <string name="str_jumpToGroupListAct">点击确认后转到分组列表\n点击取消返回分组详情</string>
    <string name="str_clickAndQuitDfg">可返回分组列表页，直接在列表中点击相应分组</string>
    <string name="str_or">或者→</string>
    <string name="another_choice">点击放弃本次记录，就当什么都没发生过。</string>
    <string name="glad_as_you">您的实际记忆水准可能会高于程序的推断值。\n程序没有意见，您开心就好！</string>
    <string name="status_1">学习情况</string>
    <string name="youCan">您可以→</string>
    <string name="str_nothingHappend">就当没学过（放弃记录）</string>
    <string name="confirm_andSetErrs">不拆分\n（记错误项的出错次数+1）</string>
    <string name="confirm_andDevide">按正误拆分本组</string>
    <string name="wrong_info_all_correct">已填写的单词全部正确</string>
    <string name="wrong_info_un_correct">已填写的单词中有%1$d个错误，点击确认后错误记录+1</string>
    <string name="empty_info_all_correct">所有单词已填写</string>
    <string name="empty_info_un_correct">%1$d个单词未填，确认将拆分分组</string>
    <string name="empty_amount_divide">%1$d个单词未完成，将按完成与否拆分分组</string>
    <string name="empty_amount_create">%1$d个单词未完成，未完成者将不被纳入分组</string>
    <string name="rest_min_and_sec">还剩%1$d分%2$d秒，可以返回查看</string>
    <string name="still_has_wrong_item">仍有%1$d个未填写正确，请检查。（点击可强行结束）</string>
    <string name="learn_and_repick">学而时习之……</string>
    <string name="str_infoArea">（信息区域）</string>
    <string name="save_area_1">预留区域1</string>
    <string name="save_area_2">预留区域2</string>
    <string name="preparing_data_start_soon">正在准备数据，马上开始……</string>
    <string name="num_59">59</string>
    <string name="explanations_all_app_01">字符字符字符：字符字符字符字符字符字符字符字符字符字符字符字符”</string>
    <string name="explanations_all_app_02">字符字符字符字符字，字符字符字符字符字符字符字符字符字符字符字符字符</string>
    <string name="explanations_all_app_11">认知规律表明：字符字符字符字符字符字符字，符字符字符字符字符字符。
        字符字符字符字,符字①符字符字符字符字符字符字符字符，②字符字符字符字符字符字符字符字符。</string>
    <string name="explanations_all_app_12">字符字符字符字符字符字符字符字符字符字符字符字符：①xxx：符字符字；②MS：符字符字。</string>
    <string name="explanations_all_app_13">字符字符字符字符字符字符字符字符,字符字符字符字符。字符字符字符字符字符字。
        字符字符字符字符字符字符,字符字符字符字符字符字符。</string>
    <string name="explanations_all_app_14">字符字符字符字符字符字符字符字符字符字符字符字符字符字符字符字符
        字符字符字。符字符字符字符字符字符字符字。符字符字符字符字符字符</string>
    <string name="explanations_all_app_15">通常来说，字符字符字符字符字符字符字符字符字符字符字符字符。
        如果间隔时间过久，字符字符字符字符字符字符字符字符字符字符字符字符，字符字符字符字符字符字符字符字符字。</string>
    <string name="explanations_all_app_16">鼓励更早、更频繁的复习，这样有助于记忆效果的强化。但是必须指出，
        字符字符字符字符字符字符字符字符字符字符字符字符</string>
    <string name="explanation">说明</string>
    <string name="set_as_default">设为默认</string>
    <string name="fast_learn_2">开始快速学习</string>
    <string name="no_more_show">不再显示本对话框</string>
    <string name="confirm_go">确认并开始</string>
    <string name="could_change_in_setting">*可以在程序→设置中重新开启显示。</string>
    <string name="ms_first">MS优先</string>
    <string name="rma_first">RMA优先</string>
    <string name="tt_first">智能优先</string>
    <string name="commit_when_confirm_2">（点击确定时设置会被保存）</string>
    <string name="tip_fastRePick_ms">*MS优先：优先复习MS值较低的分组</string>
    <string name="tip_fastRePick_rma">*RMA优先：优先复习RMA值较低的分组</string>
    <string name="tip_fastRePick_tt">*智能优先：由系统选择最需要及时复习的分组</string>
    <string name="hs_clock_down">自动选择：%1$d</string>
    <string name="query">询问</string>
    <string name="low_size_better_using_merge">本组容量较小，是否以合并方式开始学习（如选择是，则将跳转到可合并分组选择页）</string>
    <string name="still_use_lg">不用</string>
    <string name="ok_with_that">好的</string>
</resources>