<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="8dp"
    tools:context=".fragments.LearningTimeUpDiaFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:padding="4dp"
        android:gravity="center"
        android:text="@string/time_up1"
        android:textSize="16sp"
        android:background="#aa64b5f6"
        />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="96dp">
        <TextView
            android:layout_width="96dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/save_area_1"
            />
        <!--竖分割线-->
        <TextView
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#aaaaaa"
            />
        <TextView
            android:id="@+id/tv_status_timeEndingDfg"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:padding="20dp"
            android:text="@string/save_area_2"
            />
    </LinearLayout>



    <TextView
        android:id="@+id/tvBtn_confirm_div_timeEndingDfg"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:gravity="center"
        android:text="@string/confirm_andDevide"
        android:background="#b2ff59"
        />

    <TextView
        android:id="@+id/tvBtn_confirm_err_timeEndingDfg"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_margin="1dp"
        android:gravity="center"
        android:text="@string/confirm_andSetErrs"
        android:textSize="12sp"
        android:lines="2"
        android:background="#eeff41"
        />

    <TextView
        android:id="@+id/tvBtn_anotherChoice_timeEndingDfg"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:gravity="center"
        android:text="@string/str_nothingHappend"
        android:background="#ffb74d"
        />





</LinearLayout>