<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.CreateGroupDiaFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:text="@string/fast_learn_2"
        android:gravity="center"
        android:textSize="16sp"
        android:background="#efefef"
        />
    <Space
        android:layout_width="match_parent"
        android:layout_height="12dp" />
    <!--横分割线-->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#efefef"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:gravity="center"
        android:text="@string/hs_clock_down"
        />

    <!--横分割线-->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#efefef"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">



        <RadioGroup
            android:id="@+id/rg_manner_dfgFRP"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:padding="2dp"
            >

            <RadioButton
                android:id="@+id/rb_ms_first_dfgFRP"
                android:padding="2dp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/ms_first"
                android:checked="true"
                />
            <RadioButton
                android:id="@+id/rb_rma_first_dfgFRP"
                android:padding="2dp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:checked="true"
                android:text="@string/rma_first"/>
            <RadioButton
                android:id="@+id/rb_tt_first_dfgFRP"
                android:padding="2dp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:checked="true"
                android:text="@string/tt_first"/>


        </RadioGroup>



    </LinearLayout>

    <!--横分割线-->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#efefef"
        />



    <!--横分割线-->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#efefef"
        />

    <Space
        android:layout_width="match_parent"
        android:layout_height="24dp" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tip_fastRePick_ms"
        android:gravity="center"
        android:padding="6dp"
        android:paddingStart="18dp"
        android:paddingEnd="18dp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tip_fastRePick_rma"
        android:gravity="center"
        android:padding="6dp"
        android:paddingStart="18dp"
        android:paddingEnd="18dp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tip_fastRePick_tt"
        android:gravity="center"
        android:padding="6dp"
        android:paddingStart="18dp"
        android:paddingEnd="18dp"
        />
    <Space
    android:layout_width="match_parent"
    android:layout_height="12dp" />

    <!--横分割线-->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#e0e0e0"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="">

        <CheckBox
            android:id="@+id/ckb_setAsDefault_dfgFRP"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:gravity="center_vertical"
            android:text="@string/set_as_default"
            android:textSize="12sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="4dp"
            android:gravity="center_vertical"
            android:lines="1"
            android:text="@string/commit_when_confirm_2"
            android:textColor="@android:color/holo_orange_dark"
            android:textSize="12sp" />

    </LinearLayout>
    <!--横分割线-->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#efefef"
        />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        >

        <CheckBox
            android:id="@+id/ckb_noMoreTipBox_dfgFRP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/no_more_show"
            android:textColor="@android:color/holo_orange_dark"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginStart="24dp"
            android:layout_marginBottom="4dp"
            android:textSize="10sp"
            android:lines="1"
            android:text="@string/could_change_in_setting"/>
    </FrameLayout>

    <!--横分割线-->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#b2ff59"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal"
        >

        <TextView
            android:id="@+id/btn_cancel_dfgFRP"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_margin="2dp"
            android:text="@string/cancel"
            android:textSize="16sp"
            android:background="#55e5e5e5"

            />

        <TextView
            android:id="@+id/btn_ok_dfgFRP"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_margin="2dp"
            android:text="@string/confirm_go"
            android:textSize="16sp"
            android:background="#e0e0e0"

            />


    </LinearLayout>


</LinearLayout>