<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.DeleteGroupDiaFragment">


    <!--Title-->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:background="#efefef"
        android:text="@string/query"
        android:textSize="16sp"
        android:gravity="center"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:padding="32dp"
        android:text="@string/low_size_better_using_merge"
        android:gravity="center"
        android:textSize="16sp"
        android:textColor="#ef5350"

        />

    <!--横分割线-->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/yo_light_green"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal"
        android:layout_marginTop="1dp"
        >

        <TextView
            android:id="@+id/btn_cancel_queryDfg"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_margin="1dp"
            android:text="@string/cancel"
            android:textSize="16sp"
            android:background="#efefef"
            />
        <TextView
            android:id="@+id/btn_ok_queryDfg"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_margin="1dp"
            android:text="@string/ok_with_that"
            android:textSize="16sp"
            android:background="@color/yo_teal"
            />
        <TextView
            android:id="@+id/btn_lg_queryDfg"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_margin="1dp"
            android:text="@string/still_use_lg"
            android:textSize="16sp"
            android:background="@color/yo_orange"
            />
    </LinearLayout>


</LinearLayout>